--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,23 @@
+# === APLIKACE ===
+NODE_ENV=development
 NEXT_PUBLIC_APP_URL=https://localhost:3000
 AUTH_SECRET=__set_locally__
-GOOGLE_CLIENT_ID=__from_google__
-GOOGLE_CLIENT_SECRET=__from_google__
-DATABASE_URL=mysql://USER:PASS@HOST:PORT/DB
-RESEND_API_KEY=__from_resend__
+AUTH_TRUST_HOST=true
+
+# === DATABÁZE (MySQL) ===
+# Formát: mysql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL="mysql://user:pass@host:3306/lepsi_dev_pers"
+
+# Pokud nemáš CREATE DATABASE práva, nastav stínovou DB jinam (viz níže “Migrace bez shadow DB”)
+# PRISMA_MIGRATE_SHADOW_DATABASE_URL="mysql://user:pass@host:3306/_shadow_db"
+
+# === GOOGLE OAUTH (NextAuth) ===
+GOOGLE_CLIENT_ID=xxx.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=xxx
+
+# === RESEND (e-maily) ===
+RESEND_API_KEY=re_xxx
+EMAIL_FROM="KITT6 HR <no-reply@firma.cz>"
 RESEND_EMAIL_FROM=test@onboarding.resend.dev
 RESEND_EMAIL_TO=your-mail@example.com
 RESEND_USERNAME=resend
@@ -11,3 +25,6 @@ RESEND_EMAIL_FROM_HR=hr@example.com
 RESEND_EMAIL_FROM_IT=it@example.com
 REPORT_RECIPIENTS_PLANNED=hr1@firma.cz,hr2@firma.cz
 REPORT_RECIPIENTS_ACTUAL=it1@firma.cz,it2@firma.cz
+
+# (volitelné) Base URL pro generování odkazů v e-mailech / notifikacích:
+APP_BASE_URL=http://localhost:3000
