--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ yarn-error.log*
 # local env files
 .env*.local
 .env.local
+.env
 
 # vercel
 .vercel
@@ -38,4 +39,6 @@ yarn-error.log*
 # email
 /.react-email/
 
-.vscode
+.vscode.env
+.env.local
+
