--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "crons": [
     { "path": "/api/cron/ensure-monthly-summary", "schedule": "0 8 1 * *" },
-    { "path": "/api/cron/mail-worker", "schedule": "*/10 * * * *" }
+    { "path": "/api/cron/mail-worker", "schedule": "*/10 * * * *" },
+    { "path": "/api/cron/probation", "schedule": "0 8 * * *" }
   ]
 }
