fix package.json for running

--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "pnpm run dev",
-    "build": "pnpm run build",
-    "start": "pnpm run start",
-    "postinstall": "pnpm prisma generate",
-    "db:generate": "pnpm prisma generate",
-    "db:migrate": "pnpm prisma migrate dev",
-    "db:push": "pnpm prisma db push",
-    "db:pull": "npx prisma db pull",
-    "db:reset": "npx prisma migrate reset",
-    "db:studio": "npx prisma studio",
-    "db:seed": "npx prisma db seed",
-    "shadcn:add": "pnpm dlx shadcn-ui@latest add",
-    "packages:update-all": "pnpm update --latest",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "postinstall": "prisma generate",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:push": "prisma db push",
+    "db:pull": "prisma db pull",
+    "db:reset": "prisma migrate reset -f",
+    "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
+    "shadcn:add": "npx shadcn-ui@latest add",
+    "packages:update-all": "npm update --location=project --save --save-dev",
     "prettier:format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "prettier:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
     "email": "email dev --dir emails --port 3333",
