--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ yarn-error.log*
 .env*.local
 .env.local
 .env
+.env.production
 
 # vercel
 .vercel
@@ -40,5 +41,5 @@ yarn-error.log*
 /.react-email/
 
 .vscode.env
-.env.local
+
 
