fixing auth and session, plus the history of every row

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,21 +1,24 @@
-# === APLIKACE ===
-NODE_ENV=development
-NEXT_PUBLIC_APP_URL=https://localhost:3000
-AUTH_SECRET=__set_locally__
+# APP
+NODE_ENV="development"
+PORT=3001
+
+NEXT_PUBLIC_APP_URL=http://localhost:3001
+NEXTAUTH_URL=http://localhost:3001
+
 AUTH_TRUST_HOST=true
 
-# === DATABÁZE (MySQL) ===
-# Formát: mysql://USER:PASSWORD@HOST:PORT/DATABASE
-DATABASE_URL="mysql://user:pass@host:3306/lepsi_dev_pers"
-
-# Pokud nemáš CREATE DATABASE práva, nastav stínovou DB jinam (viz níže “Migrace bez shadow DB”)
-# PRISMA_MIGRATE_SHADOW_DATABASE_URL="mysql://user:pass@host:3306/_shadow_db"
-
-# === GOOGLE OAUTH (NextAuth) ===
+# AUTHENTICATION (@ NEXT-AUTH)
+# Secret can be generated with `openssl rand -base64 32`
+# Follow instructions at https://codevoweb.com/nextjs-add-google-and-github-oauth2-using-nextauth-js/ to obtain client ids and secrets
+AUTH_SECRET=__set_locally__
 GOOGLE_CLIENT_ID=xxx.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=xxx
 
-# === RESEND (e-maily) ===
+# DATABASE (MYSQL)
+# Formát: mysql://USER:PASSWORD@HOST:PORT/DATABASE
+DATABASE_URL="mysql://user:pass@host:3306/lepsi_dev_pers"
+
+# EMAIL(@RESEND)/EOS/CRON/FORM
 RESEND_API_KEY=re_xxx
 EMAIL_FROM="KITT6 HR <no-reply@firma.cz>"
 RESEND_EMAIL_FROM=test@onboarding.resend.dev
@@ -26,5 +29,8 @@ RESEND_EMAIL_FROM_IT=it@example.com
 REPORT_RECIPIENTS_PLANNED=hr1@firma.cz,hr2@firma.cz
 REPORT_RECIPIENTS_ACTUAL=it1@firma.cz,it2@firma.cz
 
-# (volitelné) Base URL pro generování odkazů v e-mailech / notifikacích:
-APP_BASE_URL=http://localhost:3000
+EOS_API_BASE="https://xxx"
+
+CRON_SECRET="tajny_klic_pro_spousteni_cronu"
+
+CANDIDATE_FORM_URL="https://tvoje-domena.cz/formular"
