--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "start": "next start -p 3001",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:validate": "prisma validate",
     "db:migrate": "prisma migrate dev",
+    "db:reset": "prisma migrate reset -f",
     "db:push": "prisma db push",
     "db:pull": "prisma db pull",
-    "db:reset": "prisma migrate reset -f",
-    "db:studio": "prisma studio",
-    "db:seed": "prisma db seed",
     "shadcn:add": "npx shadcn-ui@latest add",
     "packages:update-all": "npm update --location=project --save --save-dev",
     "prettier:format": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
@@ -138,9 +138,6 @@
     "remark-gfm": "^4.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
-  },
-  "prisma": {
-    "seed": "node prisma/seed.mjs"
   },
   "engine": {
     "node": ">=20.10.0"
