--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mantine/core": "^8.2.2",
     "@mantine/dates": "^8.2.2",
     "@neondatabase/serverless": "^1.0.1",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/adapter-neon": "^6.15.0",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -66,6 +67,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "^0.0.17",
+    "@react-email/render": "^1.4.0",
     "@studio-freight/react-lenis": "^0.0.47",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@vercel/analytics": "^1.2.2",
@@ -87,6 +89,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.3.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.19.4",
     "react-calendar": "^6.0.0",
