FEAT: adding logic for sentry, documents - pdf, emails, reset, fixing bugs and problems, fixing the styling and look of components

--- a/.env.local.example
+++ b/.env.local.example
@@ -18,8 +18,8 @@ GOOGLE_CLIENT_SECRET=xxx
 # Formát: mysql://USER:PASSWORD@HOST:PORT/DATABASE
 DATABASE_URL="mysql://user:pass@host:3306/lepsi_dev_pers"
 
-# EMAIL(@RESEND)/EOS/CRON/FORM
-RESEND_API_KEY=re_xxx
+# EMAIL (@RESEND) / EOS / CRON / FORM
+RESEND_API_KEY=__RESEND_API_KEY__
 EMAIL_FROM="KITT6 HR <no-reply@firma.cz>"
 RESEND_EMAIL_FROM=test@onboarding.resend.dev
 RESEND_EMAIL_TO=your-mail@example.com
@@ -29,8 +29,14 @@ RESEND_EMAIL_FROM_IT=it@example.com
 REPORT_RECIPIENTS_PLANNED=hr1@firma.cz,hr2@firma.cz
 REPORT_RECIPIENTS_ACTUAL=it1@firma.cz,it2@firma.cz
 
-EOS_API_BASE="https://xxx"
+EOS_API_BASE="https://eos-api.example.com"
 
-CRON_SECRET="tajny_klic_pro_spousteni_cronu"
+CRON_SECRET="__CRON_SECRET__"
 
 CANDIDATE_FORM_URL="https://tvoje-domena.cz/formular"
+
+# SENTRY – šablona
+SENTRY_DSN="__SENTRY_DSN__"
+SENTRY_ENVIRONMENT="development"
+SENTRY_TRACES_SAMPLE_RATE=0.1
+SENTRY_PROFILES_SAMPLE_RATE=0.1
