FEAT: adding email changes, email groups and environments

--- a/.env.local.example
+++ b/.env.local.example
@@ -33,10 +33,10 @@ EOS_API_BASE="https://eos-api.example.com"
 
 CRON_SECRET="__CRON_SECRET__"
 
-CANDIDATE_FORM_URL="https://tvoje-domena.cz/formular"
-
 # SENTRY – šablona
 SENTRY_DSN="__SENTRY_DSN__"
-SENTRY_ENVIRONMENT="development"
+NEXT_PUBLIC_SENTRY_DSN="__SENTRY_DSN__"
+SENTRY_ENVIRONMENT=development
+NEXT_PUBLIC_SENTRY_ENVIRONMENT=development
 SENTRY_TRACES_SAMPLE_RATE=0.1
 SENTRY_PROFILES_SAMPLE_RATE=0.1
