--- a/.env.local.example
+++ b/.env.local.example
@@ -20,11 +20,10 @@ DATABASE_URL="mysql://user:pass@host:3306/lepsi_dev_pers"
 
 # EMAIL (@RESEND) / EOS / CRON / FORM
 RESEND_API_KEY=__RESEND_API_KEY__
-EMAIL_FROM="KITT6 HR <no-reply@firma.cz>"
-RESEND_EMAIL_FROM=test@onboarding.resend.dev
-RESEND_EMAIL_TO=your-mail@example.com
-REPORT_RECIPIENTS_PLANNED=hr1@firma.cz,hr2@firma.cz
-REPORT_RECIPIENTS_ACTUAL=it1@firma.cz,it2@firma.cz
+RESEND_EMAIL_FROM="test@onboarding.resend.dev"
+REPORT_RECIPIENTS_PLANNED="hr1@firma.cz,hr2@firma.cz"
+REPORT_RECIPIENTS_ACTUAL="it1@firma.cz,it2@firma.cz"
+REPORT_RECIPIENTS_ALL="all@firma.cz"
 
 EOS_API_BASE="https://eos-api.example.com"
 
