FIX small bugs, added api/health/route

--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "private": true,
   "name": "On-Off-Boarding-Module",
   "description": "",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "type": "module",
   "scripts": {
-    "predev": "node scripts/build-info.mjs",
     "dev": "next dev -p 3001",
-    "prebuild": "node scripts/build-info.mjs",
-    "build": "next build",
+    "build": "node ./scripts/build-info.mjs && next build",
     "start": "next start -p 3001",
     "postinstall": "prisma generate",
     "db:generate": "prisma generate",
