--- a/.env.local.example
+++ b/.env.local.example
@@ -3,6 +3,7 @@ NODE_ENV="development"
 PORT=3001
 
 NEXT_PUBLIC_APP_URL=http://localhost:3001
+AUTH_URL=http://localhost:3001
 NEXTAUTH_URL=http://localhost:3001
 
 AUTH_TRUST_HOST=true
